# bevy_game_template

./: Cargo.toml  README.md
.github/workflows/: release-android-google-play.yaml
apps/mobile/: Cargo.toml  Makefile  manifest.yaml
apps/mobile/mobile.xcodeproj/: project.pbxproj
editor/: Cargo.toml  README.md
editor/src/: lib.rs  main.rs
game/blueprint/: Cargo.toml  README.md
game/blueprint/src/: lib.rs
game/controls/: Cargo.toml  README.md
game/controls/src/: controllers.rs  lib.rs  systems.rs
game/flavor/: Cargo.toml  README.md
game/flavor/src/: audio.rs  graphics.rs  lib.rs  loading.rs
game/gameplay/: Cargo.toml  README.md
game/gameplay/src/: lib.rs
src/: lib.rs  main.rs  menu.rs
